Major Update: Users can now add their own vehicles users can register for accounts users can own a vehicle improved error handling

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,8 +15,8 @@
             <label>Email</label>
             <input name="Email" type="email" required>
             <br>
-            <label>Surname</label>
-            <input name="password" type="password" required>
+            <label>Password</label>
+            <input name="Password" type="password" required>
             <br>
             <input type="submit" value="Login">
         </form>
