--- a/templates/register.html
+++ b/templates/register.html
@@ -9,14 +9,13 @@
 <div id="container">
     <div id="dom">
         <h1>Register</h1>
-
         <div id="userform">
         <form method="post">
             <label>Firstname</label>
             <input name="firstname" type="text" required>
             <br>
             <label>Surname</label>
-            <input name="surname" type="text" required>
+            <input name="lastname" type="text" required>
             <br>
             <label>Email</label>
             <input name="email" type="email" required>
