Major Update: Updated database cursor connection handling (work in progress) added hyperlinks for navigation

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,12 @@
             <br>
             <input type="submit" value="calculate">
         </form>
+        <form action="/register">
+            <input type="submit" value="Add User">
+        </form>
+        <form action="/add_vehicle">
+            <input type="submit" value="Add Vehicle">
+        </form>
         <br>
         <h2>Calculated MPG:</h2>
         <p>{{result['calculated_mpg']}}</p>
