--- a/templates/register.html
+++ b/templates/register.html
@@ -25,6 +25,9 @@
             <br>
             <input type="submit" value="Register">
         </form>
+            <form action="/">
+                <input type="submit" value="home">
+            </form>
         </div>
         </div>
 </div>
