--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -34,6 +34,9 @@
             <br>
             <input type="submit" value="add car">
         </form>
+            <form action="/">
+                <input type="submit" value="home">
+            </form>
         </div>
         </div>
 </div>
