Added example accounts

--- a/templates/add_vehicle.html
+++ b/templates/add_vehicle.html
@@ -17,10 +17,10 @@
             <label>Registration</label>
             <input name="registration" type="text" required>
             <br>
-            <label>Email</label>
+            <label>Make</label>
             <input name="make" type="text" required>
             <br>
-            <label>Password</label>
+            <label>Model</label>
             <input name="model" type="text" required>
             <br>
             <label>Year of Manufacture</label>
