--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home Page</title>
+    <title>Fuel Economy Calculator</title>
     <link rel="stylesheet" href="/static/layout.css" type="text/css"/>
 </head>
 <body>
